--- a/week03-williams0692.ipynb
+++ b/week03-williams0692.ipynb
@@ -139,7 +139,8 @@
     "calculate_target (temp)\n",
     "#This step defines a fnx called \"calculate_target\" that uses an internal variable, called \"temp\".\n",
     "#The internal var \"temp\" is calculated by utilizing the external var, \"temp\".\n",
-    "#We evaluate the right side of the equation 4, then apply the left: 4-103= -99"
+    "#We evaluate the right side of the equation 4, then apply the left: 4-103= -99 It comes out as positive\n",
+    "#due to its type."
    ]
   },
   {
@@ -490,29 +491,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "Untracked files:\n",
-      "\t.ipynb_checkpoints/\n",
-      "\tweek03-williams0692.ipynb\n",
-      "\n",
-      "nothing added to commit but untracked files present\n"
+      "[master 0bfcee6] Adding homework for week 3\n",
+      " 1 file changed, 571 insertions(+)\n",
+      " create mode 100644 week03-williams0692.ipynb\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec 'hds5210-week02/week03-williams0692' did not match any files\n",
       "warning: push.default is unset; its implicit value has changed in\n",
       "Git 2.0 from 'matching' to 'simple'. To squelch this message\n",
       "and maintain the traditional behavior, use:\n",
@@ -534,14 +531,15 @@
       "(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode\n",
       "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
       "\n",
-      "Everything up-to-date\n"
+      "To git@github.com:williams0692/hds5210-week02.git\n",
+      "   5c7a0fc..0bfcee6  master -> master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "cd ~/notebooks/hds5210-week02/\n",
-    "git add week03-williams0692\n",
+    "git add week03-williams0692.ipynb\n",
     "git commit -a -m \"Adding homework for week 3\"\n",
     "git push"
    ]
