Adding homework for week 4

--- a/week03-williams0692.ipynb
+++ b/week03-williams0692.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -501,9 +501,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 0bfcee6] Adding homework for week 3\n",
-      " 1 file changed, 571 insertions(+)\n",
-      " create mode 100644 week03-williams0692.ipynb\n"
+      "[master 567fb21] Adding homework for week 3\n",
+      " 1 file changed, 11 insertions(+), 13 deletions(-)\n"
      ]
     },
     {
@@ -532,7 +531,7 @@
       "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
       "\n",
       "To git@github.com:williams0692/hds5210-week02.git\n",
-      "   5c7a0fc..0bfcee6  master -> master\n"
+      "   0bfcee6..567fb21  master -> master\n"
      ]
     }
    ],
