--- a/week05-williams0692.ipynb
+++ b/week05-williams0692.ipynb
@@ -200,28 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: pathspec 'week05-williams0692.ipynb' did not match any files\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "cd ~/notebooks/hds5210-week02/\n",
-    "git add week05-williams0692.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -231,19 +210,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "Untracked files:\n",
-      "\t.ipynb_checkpoints/\n",
-      "\n",
-      "nothing added to commit but untracked files present\n"
+      "[master 8c0d7ad] Adding homework for week 5\n",
+      " 1 file changed, 302 insertions(+)\n",
+      " create mode 100644 week05-williams0692.ipynb\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec 'week05-williams0692.ipynb' did not match any files\n",
       "warning: push.default is unset; its implicit value has changed in\n",
       "Git 2.0 from 'matching' to 'simple'. To squelch this message\n",
       "and maintain the traditional behavior, use:\n",
@@ -265,7 +240,8 @@
       "(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode\n",
       "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
       "\n",
-      "Everything up-to-date\n"
+      "To git@github.com:williams0692/hds5210-week02.git\n",
+      "   ecae76b..8c0d7ad  master -> master\n"
      ]
     }
    ],
