Submitting my midterm!!

--- a/week07-williams0692.ipynb
+++ b/week07-williams0692.ipynb
@@ -309,34 +309,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-64-d4890136c272>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-d4890136c272>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    output.write(out)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('avg.txt','w') as output:\n",
     "    for items in averages:\n",
-    "        out = \"{:s}|{:s}\\n\".format(items[0],str(items[1],\"\")\n",
+    "        out = \"{:s}|{:s}\\n\".format(items[0],str(items[1]))\n",
     "        output.write(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alabama|479.7368421052632\n",
+      "Alaska|517.6842105263158\n",
+      "Arizona|3287.315789473684\n",
+      "Arkansas|3827.315789473684\n",
+      "California|12616.421052631578\n",
+      "Colorado|13581.026315789473\n",
+      "Connecticut|13921.052631578947\n",
+      "Delaware|14110.763157894737\n",
+      "District of Columbia|14164.631578947368\n",
+      "Florida|20214.684210526317\n",
+      "Georgia|22346.63157894737\n",
+      "Hawaii|22446.842105263157\n",
+      "Idaho|22888.57894736842\n",
+      "Illinois|25122.28947368421\n",
+      "Indiana|26218.86842105263\n",
+      "Iowa|26475.026315789473\n",
+      "Kansas|26809.21052631579\n",
+      "Kentucky|27580.28947368421\n",
+      "Louisiana|28454.605263157893\n",
+      "Maine|28491.342105263157\n",
+      "Maryland|29443.78947368421\n",
+      "Massachusetts*|29454.86842105263\n",
+      "Michigan|30699.42105263158\n",
+      "Minnesota|31156.657894736843\n",
+      "Mississippi|31386.184210526317\n",
+      "Missouri|32688.447368421053\n",
+      "Montana|32950.34210526316\n",
+      "Nebraska|33199.39473684211\n",
+      "Nevada|33990.78947368421\n",
+      "New Hampshire|34383.81578947369\n",
+      "New Jersey|35297.57894736842\n",
+      "New Mexico|36266.0\n",
+      "New York|39372.52631578947\n",
+      "North Carolina|42667.60526315789\n",
+      "North Dakota|42722.07894736842\n",
+      "Ohio|45040.84210526316\n",
+      "Oklahoma|45701.68421052631\n",
+      "Oregon|46820.68421052631\n",
+      "Pennsylvania|51626.81578947369\n",
+      "Rhode Island|51754.97368421053\n",
+      "South Carolina|53009.18421052631\n",
+      "South Dakota|53149.71052631579\n",
+      "Tennessee|54298.97368421053\n",
+      "Texas|59827.28947368421\n",
+      "Utah|60553.55263157895\n",
+      "Vermont*|60554.42105263158\n",
+      "Virginia|62203.23684210526\n",
+      "Washington|62826.94736842105\n",
+      "West Virginia|62937.23684210526\n",
+      "Wisconsin|64340.0\n",
+      "Wyoming|64522.68421052631\n",
+      "Total|129044.81578947368\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cat avg.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master a6e0cb9] Adding HW7\n",
+      " 3 files changed, 464 insertions(+), 3 deletions(-)\n",
+      " create mode 100644 avg.txt\n",
+      " create mode 100644 week07-williams0692.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: push.default is unset; its implicit value has changed in\n",
+      "Git 2.0 from 'matching' to 'simple'. To squelch this message\n",
+      "and maintain the traditional behavior, use:\n",
+      "\n",
+      "  git config --global push.default matching\n",
+      "\n",
+      "To squelch this message and adopt the new behavior now, use:\n",
+      "\n",
+      "  git config --global push.default simple\n",
+      "\n",
+      "When push.default is set to 'matching', git will push local branches\n",
+      "to the remote branches that already exist with the same name.\n",
+      "\n",
+      "Since Git 2.0, Git defaults to the more conservative 'simple'\n",
+      "behavior, which only pushes the current branch to the corresponding\n",
+      "remote branch that 'git pull' uses to update the current branch.\n",
+      "\n",
+      "See 'git help config' and search for 'push.default' for further information.\n",
+      "(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode\n",
+      "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
+      "\n",
+      "To git@github.com:williams0692/hds5210-week02.git\n",
+      "   59ab7fe..a6e0cb9  master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git add week07-williams0692.ipynb\n",
