--- a/week09-williams0692.ipynb
+++ b/week09-williams0692.ipynb
@@ -554,17 +554,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 982,
+   "execution_count": 983,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 8770bde] Adding homework for week 9\n",
+      " 2 files changed, 643 insertions(+), 3 deletions(-)\n",
+      " create mode 100644 week09-williams0692.ipynb\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "bash: line 2: unexpected EOF while looking for matching `\"'\n",
-      "bash: line 4: syntax error: unexpected end of file\n"
+      "warning: push.default is unset; its implicit value has changed in\n",
+      "Git 2.0 from 'matching' to 'simple'. To squelch this message\n",
+      "and maintain the traditional behavior, use:\n",
+      "\n",
+      "  git config --global push.default matching\n",
+      "\n",
+      "To squelch this message and adopt the new behavior now, use:\n",
+      "\n",
+      "  git config --global push.default simple\n",
+      "\n",
+      "When push.default is set to 'matching', git will push local branches\n",
+      "to the remote branches that already exist with the same name.\n",
+      "\n",
+      "Since Git 2.0, Git defaults to the more conservative 'simple'\n",
+      "behavior, which only pushes the current branch to the corresponding\n",
+      "remote branch that 'git pull' uses to update the current branch.\n",
+      "\n",
+      "See 'git help config' and search for 'push.default' for further information.\n",
+      "(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode\n",
+      "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
+      "\n",
+      "To git@github.com:williams0692/hds5210-week02.git\n",
+      "   bbb0ef6..8770bde  master -> master\n"
      ]
     }
    ],
